feat: translated form to en

--- a/form.html
+++ b/form.html
@@ -54,11 +54,11 @@
 			  <input class="form__input" type="email" id="email" name="email" required>
 			</div>
 			<div class="form__item">
-			  <label class="form__label" for="phone">Telefon:</label>
+			  <label class="form__label" for="phone">Phone:</label>
 			  <input class="form__input" type="tel" id="phone" name="phone" required>
 			</div>
 			<div class="form__item">
-			  <label class="form__label" for="message">Nachricht:</label>
+			  <label class="form__label" for="message">Message:</label>
 			  <textarea class="form__input" id="message" name="message" required></textarea>
 			</div>
 			<div class="form__item">
@@ -68,12 +68,12 @@
 					I accept lorem ipsum
 				  </label>
 			<div class="form__item">
-			  <label class="form__label" for="attachment">Anhang:</label>
+			  <label class="form__label" for="attachment">Attachments:</label>
 			  <input class="form__input" type="file" id="attachment" name="attachment">
 			</div>
 			<div class="grid grid--cols-8">
 				<div class="grid__col grid__col--12 grid__col--2-md">
-					<button class="button bg-primary text-white" type="submit">Absenden</button>
+					<button class="button bg-primary text-white" type="submit">Submit</button>
 					</div>
 				</div>
 			</div>
